--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
 
   <div class="grid">
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AnDSb" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AnDSb" allowfullscreen></iframe>
     </div>
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ACjcS" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ACjcS" allowfullscreen></iframe>
     </div>
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ApQdN" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ApQdN" allowfullscreen></iframe>
     </div>
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7Ab3YG" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7Ab3YG" allowfullscreen></iframe>
     </div>
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AVooP" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AVooP" allowfullscreen></iframe>
     </div>
     <div class="card">
-      <iframe src="https://www.tiktok.con/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AQgDB" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AQgDB" allowfullscreen></iframe>
     </div>
   </div>
 
