--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <div class="grid">
     <div class="card">
-      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7AnDSb" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/@afaartdesign/video/7493183835119619350?is_from_webapp=1&sender_device=pc&web_id=7561885107541198358" allowfullscreen></iframe>
     </div>
     <div class="card">
       <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ACjcS" allowfullscreen></iframe>
