--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <div class="grid">
     <div class="card">
-      <iframe src="https://www.tiktok.com/embed/7561885107541198358" allowfullscreen></iframe>
+      <iframe src="https://www.tiktok.com/embed/7561885107541198358" width="325" height"575" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="card">
       <iframe src="https://www.tiktok.com/oembed?url=https://www.tiktok.com/embed/vm.ZNd7ACjcS" allowfullscreen></iframe>
