--- a/index.html
+++ b/index.html
@@ -107,51 +107,34 @@
   </div>
 
   <div class="grid">
-    <!-- Video 1 -->
-    <div class="card">
-      <blockquote class="tiktok-embed"
-        cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350"
-        data-video-id="7493183835119619350">
-        <section></section>
-      </blockquote>
-    </div>
+ <!-- 1 -->
+<blockquote class="tiktok-embed"
+  cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350"
+  data-video-id="7493183835119619350"><section></section></blockquote>
 
-    <!-- Video 2 -->
-    <div class="card">
-      <blockquote class="tiktok-embed"
-        cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462"
-        data-video-id="7489533792789597462">
-        <section></section>
-      </blockquote>
-    </div>
+<!-- 2 -->
+<blockquote class="tiktok-embed"
+  cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462"
+  data-video-id="7489533792789597462"><section></section></blockquote>
 
-    <!-- Video 3 -->
-    <div class="card">
-      <blockquote class="tiktok-embed"
-        cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895"
-        data-video-id="7487587807909743895">
-        <section></section>
-      </blockquote>
-    </div>
+<!-- 3 -->
+<blockquote class="tiktok-embed"
+  cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895"
+  data-video-id="7487587807909743895"><section></section></blockquote>
 
-    <!-- Video 4 -->
-    <div class="card">
-      <blockquote class="tiktok-embed"
-        cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798"
-        data-video-id="7486908506671467798">
-        <section></section>
-      </blockquote>
-    </div>
+<!-- 4 -->
+<blockquote class="tiktok-embed"
+  cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798"
+  data-video-id="7486908506671467798"><section></section></blockquote>
 
-    <!-- Video 5 -->
-    <div class="card">
-      <blockquote class="tiktok-embed"
-        cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870"
-        data-video-id="7486147799478766870">
-        <section></section>
-      </blockquote>
-    </div>
-  </div>
+<!-- 5 -->
+<blockquote class="tiktok-embed"
+  cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870"
+  data-video-id="7486147799478766870"><section></section></blockquote>
+
+<!-- Script once per page -->
+<script async src="https://www.tiktok.com/embed.js"></script>
+
 
   <div class="card">
   <blockquote class="tiktok-embed"
