--- a/index.html
+++ b/index.html
@@ -1,143 +1,54 @@
-<!doctype html>
-<html lang="ro">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Portofoliu video - Andreea Rica</title>
-  <style>
-    body {
-      font-family: system-ui, Roboto, Arial, sans-serif;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-      color: #222;
-      line-height: 1.6;
-    }
+<style>
+  :root{
+    --bg-image: url('C:\Users\Bogdan\Downloads\leaf.jpg'); /* update this path */
+    --card-bg: #ffffff;
+    --overlay-color: rgba(255,255,255,0.85);
+    /* other variables... */
+  }
 
-    header {
-      text-align: center;
-      margin-bottom: 35px;
-    }
+  body {
+    margin: 0;
+    font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    color: var(--ink);
+    background: var(--bg-image) center/cover no-repeat fixed;
+    position: relative;
+  }
 
-    h1 {
-      font-size: clamp(1.8rem, 4vw, 2.5rem);
-      margin-bottom: 10px;
-    }
+  /* Add a pseudo-element to blur background */
+  body::before {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: var(--bg-image) center/cover no-repeat;
+    filter: blur(12px);
+    z-index: -2;
+  }
 
-    .intro {
-      max-width: 700px;
-      margin: 0 auto 15px;
-      font-size: 1.05rem;
-      color: #444;
-      line-height: 1.7;
-    }
+  body::after {
+    content: "";
+    position: fixed;
+    inset: 0;
+    background: var(--overlay-color);
+    z-index: -1;
+  }
 
-    .contact {
-      text-align: center;
-      font-size: 1rem;
-      color: #555;
-      margin-bottom: 35px;
-    }
+  .wrap {
+    position: relative;
+    z-index: 1;
+    /* now your content is above background blur & overlay */
+    max-width: var(--maxw);
+    margin: 0 auto;
+    padding: 28px 18px 56px;
+  }
 
-    a {
-      color: #0073e6;
-      text-decoration: none;
-    }
+  .card {
+    background: var(--card-bg);
+    border-radius: var(--radius);
+    box-shadow: var(--shadow);
+    overflow: hidden;
+    /* etc… */
+  }
 
-    a:hover {
-      text-decoration: underline;
-    }
-
-    /* ✅ Responsive video grid */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 24px;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 10px;
-    }
-
-    .card {
-      background: #fff;
-      padding: 15px;
-      border-radius: 12px;
-      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 6px 24px rgba(0, 0, 0, 0.12);
-    }
-
-    /* ✅ TikTok embed responsive behavior */
-    .tiktok-embed {
-      width: 100%;
-      max-width: 400px;
-      aspect-ratio: 9 / 16;
-      overflow: hidden;
-      border-radius: 10px;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-
-  <header>
-    <h1>Portofoliu video - Andreea Rica</h1>
-    <p class="intro">
-      Editor foto și video pasionată de storytelling vizual, specializată în crearea de conținut captivant pentru rețelele sociale.  
-      Experiență în realizarea și prezentarea videoclipurilor care inspiră, informează și atrag publicul online.
-    </p>
-  </header>
-
-  <div class="contact">
-    📞 0746 544 649 &nbsp; | &nbsp; ✉️ 
-    <a href="mailto:andreea.rica@yahoo.com">andreea.rica@yahoo.com</a>
-  </div>
-
-  <div class="grid">
- <!-- 1 -->
-<blockquote class="tiktok-embed"
-  cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350"
-  data-video-id="7493183835119619350"><section></section></blockquote>
-
-<!-- 2 -->
-<blockquote class="tiktok-embed"
-  cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462"
-  data-video-id="7489533792789597462"><section></section></blockquote>
-
-<!-- 3 -->
-<blockquote class="tiktok-embed"
-  cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895"
-  data-video-id="7487587807909743895"><section></section></blockquote>
-
-<!-- 4 -->
-<blockquote class="tiktok-embed"
-  cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798"
-  data-video-id="7486908506671467798"><section></section></blockquote>
-
-<!-- 5 -->
-<blockquote class="tiktok-embed"
-  cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870"
-  data-video-id="7486147799478766870"><section></section></blockquote>
-
-<!-- Script once per page -->
-<script async src="https://www.tiktok.com/embed.js"></script>
-
-  <footer>
-    © <script>document.write(new Date().getFullYear());</script> Andreea Rica · Toate drepturile rezervate
-  </footer>
-
-</body>
-</html>
+  /* Keep embed responsive etc… */
+  /* …your other CSS unchanged… */
+</style>
