--- a/index.html
+++ b/index.html
@@ -1,54 +1,265 @@
-<style>
-  :root{
-    --bg-image: url('C:\Users\Bogdan\Downloads\leaf.jpg'); /* update this path */
-    --card-bg: #ffffff;
-    --overlay-color: rgba(255,255,255,0.85);
-    /* other variables... */
-  }
+<!doctype html>
+<html lang="ro">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Portofoliu video - Andreea Rica</title>
 
-  body {
-    margin: 0;
-    font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    color: var(--ink);
-    background: var(--bg-image) center/cover no-repeat fixed;
-    position: relative;
-  }
+  <style>
+    :root {
+      --bg-image: url('https://img.freepik.com/free-vector/beige-leafy-watercolor-background-vector_53876-164845.jpg?t=st=1739697072~exp=1739700672~hmac=63afec95e9b42b13f39aa65d60a8ac7cb1d1959bdf67b7d6e8e00df28e99f6c6&w=1380');
+      --card: #ffffff;
+      --ink: #0f172a;
+      --muted: #5b667a;
+      --accent: #2563eb;
+      --ring: rgba(37, 99, 235, .25);
+      --radius: 16px;
+      --shadow: 0 6px 26px rgba(0, 0, 0, .08);
+      --shadow-hover: 0 10px 32px rgba(0, 0, 0, .12);
+      --maxw: 1140px;
+    }
 
-  /* Add a pseudo-element to blur background */
-  body::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: var(--bg-image) center/cover no-repeat;
-    filter: blur(12px);
-    z-index: -2;
-  }
+    /* Background setup */
+    body {
+      margin: 0;
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color: var(--ink);
+      background: var(--bg-image) center/cover no-repeat fixed;
+      position: relative;
+      min-height: 100vh;
+      overflow-x: hidden;
+    }
 
-  body::after {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background: var(--overlay-color);
-    z-index: -1;
-  }
+    /* Blurred layer */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: var(--bg-image) center/cover no-repeat;
+      filter: blur(16px) brightness(0.98);
+      transform: scale(1.05);
+      z-index: -2;
+    }
 
-  .wrap {
-    position: relative;
-    z-index: 1;
-    /* now your content is above background blur & overlay */
-    max-width: var(--maxw);
-    margin: 0 auto;
-    padding: 28px 18px 56px;
-  }
+    /* White overlay for readability */
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: rgba(255, 255, 255, 0.82);
+      z-index: -1;
+    }
 
-  .card {
-    background: var(--card-bg);
-    border-radius: var(--radius);
-    box-shadow: var(--shadow);
-    overflow: hidden;
-    /* etc… */
-  }
+    .wrap {
+      position: relative;
+      z-index: 1;
+      max-width: var(--maxw);
+      margin: 0 auto;
+      padding: 28px 18px 56px;
+    }
 
-  /* Keep embed responsive etc… */
-  /* …your other CSS unchanged… */
-</style>
+    /* Header */
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    h1 {
+      font-size: clamp(28px, 3.8vw, 40px);
+      line-height: 1.2;
+      margin: 0 0 10px;
+    }
+    .intro {
+      max-width: 760px;
+      margin: 0 auto;
+      color: var(--muted);
+      font-size: 1.05rem;
+      line-height: 1.7;
+    }
+    .contacts {
+      display: flex;
+      gap: 14px;
+      justify-content: center;
+      align-items: center;
+      margin: 18px 0 8px;
+      color: var(--muted);
+      flex-wrap: wrap;
+    }
+    .contacts a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+    .contacts a:hover {
+      text-decoration: underline;
+    }
+
+    /* Grid */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 26px;
+      margin-top: 18px;
+    }
+
+    /* Card styling */
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 14px;
+      transition: transform 0.18s ease, box-shadow 0.18s ease;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: var(--shadow-hover);
+    }
+    .frame {
+      border-radius: 12px;
+      overflow: hidden;
+      outline: 1px solid #e9edf6;
+    }
+
+    /* TikTok embeds */
+    .tiktok-embed {
+      width: 100%;
+      max-width: 420px;
+      aspect-ratio: 9 / 16;
+      margin: 0 auto;
+    }
+
+    /* Buttons */
+    .meta {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 10px;
+    }
+    .btn {
+      appearance: none;
+      border: 0;
+      background: #eef3ff;
+      color: var(--accent);
+      padding: 8px 12px;
+      border-radius: 999px;
+      font-weight: 600;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      transition: box-shadow 0.15s ease, transform 0.05s ease;
+    }
+    .btn:hover {
+      box-shadow: 0 0 0 6px var(--ring);
+    }
+    .btn:active {
+      transform: translateY(1px);
+    }
+
+    footer {
+      text-align: center;
+      color: var(--muted);
+      margin-top: 40px;
+      font-size: 0.95rem;
+    }
+
+    @media (min-width: 900px) {
+      .grid {
+        gap: 30px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <header>
+      <h1>Portofoliu video – Andreea Rica</h1>
+      <p class="intro">
+        Editor foto și video pasionată de storytelling vizual, specializată în crearea de conținut captivant pentru rețelele sociale.
+        Experiență în realizarea și prezentarea videoclipurilor care inspiră, informează și atrag publicul online.
+      </p>
+      <div class="contacts">
+        <span>📞 0746 544 649</span>
+        <span>•</span>
+        <a href="mailto:andreea.rica@yahoo.com">andreea.rica@yahoo.com</a>
+        <span>•</span>
+        <a href="https://www.tiktok.com/@afaartdesign" target="_blank" rel="noopener">TikTok @afaartdesign</a>
+      </div>
+    </header>
+
+    <!-- Video gallery -->
+    <main class="grid">
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350"
+            data-video-id="7493183835119619350">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7493183835119619350" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462"
+            data-video-id="7489533792789597462">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7489533792789597462" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895"
+            data-video-id="7487587807909743895">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7487587807909743895" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798"
+            data-video-id="7486908506671467798">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486908506671467798" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870"
+            data-video-id="7486147799478766870">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486147799478766870" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
+    </main>
+
+    <footer>
+      © <script>document.write(new Date().getFullYear())</script> Andreea Rica · Toate drepturile rezervate
+    </footer>
+  </div>
+
+  <script async src="https://www.tiktok.com/embed.js"></script>
+</body>
+</html>
