--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="contacts">
         <span>📞 0746 544 649</span><span>•</span>
         <a href="mailto:andreea.rica@yahoo.com">andreea.rica@yahoo.com</a><span>•</span>
-        <a href="https://www.tiktok.com/@afaartdesign" target="_blank" rel="noopener">TikTok @afaartdesign</a>
+        <a href="https://www.tiktok.com/@andreea_a.r" target="_blank" rel="noopener">TikTok @andreea_a.r</a>
       </div>
     </header>
 
