--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root {
       /* ✅ LOCAL image file you added to the repo */
-      --bg-image: url('assets/leaf.jpg');
+      --bg-image: url('leaf.jpg'); 
       --card: #ffffff;
       --ink: #0f172a;
       --muted: #5b667a;
