--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <style>
     :root {
-      --bg-image: url('leaf.jpg'); 
+      --bg-image: url('/Portofoliu-Andreea/leaf.jpg');
       --card: #ffffff;
       --ink: #0f172a;
       --muted: #5b667a;
