--- a/index.html
+++ b/index.html
@@ -20,110 +20,220 @@
       --overlay: rgba(255,255,255,.82);
     }
 
-    /* Fallback background color so the page never looks blank */
-    html,body { background:#f6f7fb; }
+    html, body { background:#f6f7fb; }
 
     body {
       margin: 0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--ink);
-      min-height: 100vh;
+      min-height:100vh;
       position: relative;
       overflow-x: hidden;
     }
 
-    /* Blurred image layer (local file) */
     body::before {
       content:"";
       position: fixed;
-      inset: 0;
+      inset:0;
       background: var(--bg-image) center/cover no-repeat;
       filter: blur(16px) brightness(.98);
       transform: scale(1.05);
       z-index: -2;
     }
 
-    /* Soft white overlay to keep content readable */
     body::after {
       content:"";
       position: fixed;
-      inset: 0;
+      inset:0;
       background: var(--overlay);
       z-index: -1;
     }
 
-    .wrap { max-width: var(--maxw); margin: 0 auto; padding: 28px 18px 56px; position: relative; z-index: 1; }
+    .wrap {
+      max-width: var(--maxw);
+      margin:0 auto;
+      padding:28px 18px 56px;
+      position: relative;
+      z-index:1;
+    }
 
-    header { text-align: center; margin-bottom: 30px; }
-    h1 { font-size: clamp(28px, 3.8vw, 40px); line-height:1.2; margin:0 0 10px; }
-    .intro { max-width: 760px; margin: 0 auto; color: var(--muted); font-size: 1.05rem; line-height: 1.7; }
-    .contacts { display:flex; gap:14px; justify-content:center; align-items:center; margin:18px 0 8px; color:var(--muted); flex-wrap:wrap; }
-    .contacts a { color: var(--accent); text-decoration: none; }
-    .contacts a:hover { text-decoration: underline; }
+    header {
+      text-align:center;
+      margin-bottom:30px;
+    }
 
-    .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 26px; margin-top: 18px; }
-    .card { background: var(--card); border-radius: var(--radius); box-shadow: var(--shadow); padding:14px;
-            transition: transform .18s ease, box-shadow .18s ease; }
+    h1 {
+      font-size: clamp(28px,3.8vw,40px);
+      line-height:1.2;
+      margin:0 0 10px;
+    }
+
+    .intro {
+      max-width:760px;
+      margin:0 auto;
+      color: var(--muted);
+      font-size:1.05rem;
+      line-height:1.7;
+    }
+
+    .contacts {
+      display:flex;
+      gap:14px;
+      justify-content:center;
+      align-items:center;
+      margin:18px 0 8px;
+      color: var(--muted);
+      flex-wrap:wrap;
+    }
+
+    .contacts a {
+      color: var(--accent);
+      text-decoration:none;
+    }
+    .contacts a:hover {
+      text-decoration:underline;
+    }
+
+    .grid {
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px,1fr));
+      gap:26px;
+      margin-top:18px;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding:14px;
+      transition: transform .18s ease, box-shadow .18s ease;
+    }
     .card:hover { transform: translateY(-4px); box-shadow: var(--shadow-hover); }
-    .frame { border-radius: 12px; overflow: hidden; outline: 1px solid #e9edf6; }
+    .frame { border-radius:12px; overflow:hidden; outline:1px solid #e9edf6; }
 
-    .tiktok-embed { width:100%; max-width:420px; aspect-ratio: 9 / 16; margin: 0 auto; }
+    .tiktok-embed { width:100%; max-width:420px; aspect-ratio:9/16; margin:0 auto; }
 
     .meta { display:flex; justify-content:center; gap:10px; margin-top:10px; }
-    .btn { appearance:none; border:0; background:#eef3ff; color:var(--accent); padding:8px 12px; border-radius:999px;
-           font-weight:600; cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px;
-           transition: box-shadow .15s ease, transform .05s ease; }
+    .btn {
+      appearance:none; border:0;
+      background:#eef3ff;
+      color: var(--accent);
+      padding:8px 12px;
+      border-radius:999px;
+      font-weight:600;
+      cursor:pointer;
+      text-decoration:none;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      transition: box-shadow .15s ease, transform .05s ease;
+    }
     .btn:hover { box-shadow: 0 0 0 6px var(--ring); }
     .btn:active { transform: translateY(1px); }
 
-    footer { text-align:center; color:var(--muted); margin-top:40px; font-size:.95rem; }
+    footer {
+      text-align:center;
+      color: var(--muted);
+      margin-top:40px;
+      font-size:.95rem;
+    }
 
-    @media (min-width: 900px){ .grid{ gap:30px; } }
+    @media (min-width:900px) {
+      .grid { gap:30px; }
+    }
   </style>
 </head>
-
 <body>
   <div class="wrap">
     <header>
       <h1>Portofoliu video – Andreea Rica</h1>
       <p class="intro">
-        Editor foto și video pasionată de storytelling vizual, specializată în crearea de conținut captivant pentru rețelele sociale.
-        Experiență în realizarea și prezentarea videoclipurilor care inspiră, informează și atrag publicul online.
+        Editor foto și video pasionată de storytelling vizual, specializată în crearea de conținut captivant pentru rețelele sociale. Experiență în realizarea și prezentarea videoclipurilor care inspiră, informează și atrag publicul online.
       </p>
       <div class="contacts">
         <span>📞 0746 544 649</span><span>•</span>
         <a href="mailto:andreea.rica@yahoo.com">andreea.rica@yahoo.com</a><span>•</span>
-        <a href="https://www.tiktok.com/@andreea_a.r" target="_blank" rel="noopener">TikTok @andreea_a.r</a>
-        
+        <a href="https://www.tiktok.com/@afaartdesign" target="_blank" rel="noopener">TikTok @afaartdesign</a>
       </div>
     </header>
 
     <main class="grid">
-      <article class="card"><div class="frame">
-        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350" data-video-id="7493183835119619350"><section></section></blockquote>
-      </div><div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7493183835119619350" target="_blank" rel="noopener">Deschide pe TikTok</a></div></article>
+      <!-- New Video -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7498598745479662870"
+            data-video-id="7498598745479662870">
+            <section></section>
+          </blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7498598745479662870" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
 
-      <article class="card"><div class="frame">
-        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462" data-video-id="7489533792789597462"><section></section></blockquote>
-      </div><div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7489533792789597462" target="_blank" rel="noopener">Deschide pe TikTok</a></div></article>
+      <!-- Keep your other videos below... -->
+      <!-- Video 1 -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7493183835119619350"
+            data-video-id="7493183835119619350"><section></section></blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7493183835119619350" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
 
-      <article class="card"><div class="frame">
-        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895" data-video-id="7487587807909743895"><section></section></blockquote>
-      </div><div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7487587807909743895" target="_blank" rel="noopener">Deschide pe TikTok</a></div></article>
+      <!-- Video 2 -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7489533792789597462"
+            data-video-id="7489533792789597462"><section></section></blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7489533792789597462" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
 
-      <article class="card"><div class="frame">
-        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798" data-video-id="7486908506671467798"><section></section></blockquote>
-      </div><div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486908506671467798" target="_blank" rel="noopener">Deschide pe TikTok</a></div></article>
+      <!-- Video 3 -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7487587807909743895"
+            data-video-id="7487587807909743895"><section></section></blockquote>
+        </div>
+        <div class="meta">
+          <a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7487587807909743895" target="_blank">Deschide pe TikTok</a>
+        </div>
+      </article>
 
-      <article class="card"><div class="frame">
-        <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870" data-video-id="7486147799478766870"><section></section></blockquote>
-      </div><div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486147799478766870" target="_blank" rel="noopener">Deschide pe TikTok</a></div></article>
+      <!-- Video 4 -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7486908506671467798"
+            data-video-id="7486908506671467798"><section></section></blockquote>
+        </div>
+        <div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486908506671467798" target="_blank">Deschide pe TikTok</a></div>
+      </article>
+
+      <!-- Video 5 -->
+      <article class="card">
+        <div class="frame">
+          <blockquote class="tiktok-embed"
+            cite="https://www.tiktok.com/@afaartdesign/video/7486147799478766870"
+            data-video-id="7486147799478766870"><section></section></blockquote>
+        </div>
+        <div class="meta"><a class="btn" href="https://www.tiktok.com/@afaartdesign/video/7486147799478766870" target="_blank">Deschide pe TikTok</a></div>
+      </article>
+
     </main>
 
     <footer>© <script>document.write(new Date().getFullYear())</script> Andreea Rica · Toate drepturile rezervate</footer>
   </div>
 
-  <!-- TikTok embed script (once) -->
   <script async src="https://www.tiktok.com/embed.js"></script>
 </body>
 </html>
