--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     :root{
       /* ✅ background image — use your local path or raw GitHub URL */
-      --bg-image: url('/Portofoliu-Andreea/leaf.jpg');
+      --bg-image: url('https://github.com/andreearica/Portofoliu-Andreea/blob/main/leaf.jpg');
       /* or fallback: --bg-image: url('https://raw.githubusercontent.com/andreearica/Portofoliu-Andreea/main/leaf.jpg'); */
 
       --overlay: rgba(255,255,255,.82);
