--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       --shadow-hover:0 10px 32px rgba(0,0,0,.12); --maxw:1140px;
     }
 
+    <p style="text-align:center">
+  <img src="/Portofoliu-Andreea/leaf.jpg" alt="bg test" style="max-width:220px;border:1px solid #ddd;border-radius:8px">
+</p>
+
     html, body { background:#f6f7fb; }
 
     body{
