--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
   <title>Portofoliu video - Andreea Rica</title>
 
   <style>
-    :root{
-      /* ✅ background image — use your local path or raw GitHub URL */
-      --bg-image: url('https://github.com/andreearica/Portofoliu-Andreea/blob/main/leaf.jpg');
-      /* or fallback: --bg-image: url('https://raw.githubusercontent.com/andreearica/Portofoliu-Andreea/main/leaf.jpg'); */
-
+ :root{
+  --bg-image: url('https://raw.githubusercontent.com/andreearica/Portofoliu-Andreea/main/leaf.jpg');
+}
       --overlay: rgba(255,255,255,.82);
       --card:#fff; --ink:#0f172a; --muted:#5b667a; --accent:#2563eb;
       --ring: rgba(37,99,235,.25); --radius:16px; --shadow:0 6px 26px rgba(0,0,0,.08);
